--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,9 +3,16 @@
 }
 
 .hw {
-
+    padding: 0 70px;
+    border-bottom: 1px solid #D9D9D9;
 }
 
 .hwTitle {
-
+    padding: 10px 70px;
+    font-family: Montserrat, sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 26.82px;
+    text-align: left;
+    border-bottom: 1px solid #D9D9D9;
 }
