--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,58 @@
 .friendMessage {
-
+    margin-bottom: 30px;
 }
 
 .friendImageAndText {
-
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 24px;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    height: 48px;
+    margin-right: 14px;
 }
 
 .friendText {
-
+    position: relative;
+    padding: 8px 13px;
+    border-radius: 10px 10px 10px 0;
+    background-color: #F5F7FB;
+    box-shadow: 0px 5px 20px 0px rgba(29, 33, 38, 0.03);
 }
 
 .friendText:after {
-
+    content:'';
+    position: absolute;
+    left: -14px;
+    bottom: 0;
+    width: 14px;
+    height: 9px;
+    background-color: #F5F7FB;
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
 }
 
 .friendName {
-
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.5px;
+    text-align: left;
 }
 
 .friendMessageText {
-
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.5px;
+    text-align: left;
 }
 
 .friendTime {
-
+    font-family: Montserrat, sans-serif;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 12.19px;
+    padding-left: 10px;
 }
