--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,31 +1,63 @@
 .message {
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-bottom: 30px;
 }
 
 .imageAndText {
-
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 24px;
 }
 
 .imageAndText img {
-
+    width: 48px;
+    height: 48px;
+    margin-left: 14px;
 }
 
 .text {
-
+    position: relative;
+    max-width: 527px;
+    padding: 8px 13px;
+    border-radius: 10px 10px 0 10px;
+    background-color: #0066CC;
+    box-shadow: 0px 5px 20px 0px rgba(29, 33, 38, 0.03);
+    color: white;
 }
 
 .text:after {
-
+    content:'';
+    position: absolute;
+    right: -8px;
+    bottom: 0;
+    width: 15px;
+    height: 9px;
+    background-color: #0066CC;
+    clip-path: polygon(100% 100%, 0 0, 0 100%);
 }
 
 .name {
-
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.5px;
+    text-align: left;
 }
 
 .messageText {
-
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.5px;
+    text-align: left;
 }
 
 .time {
-
+    font-family: Montserrat, sans-serif;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 12.19px;
+    padding-right: 10px;
 }
