--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,11 +3,13 @@
 }
 
 .hw {
-    padding: 0 70px;
+    margin-bottom: 37px;
+    padding: 32px 70px;
     border-bottom: 1px solid #D9D9D9;
 }
 
 .hwTitle {
+    margin-bottom: 32px;
     padding: 10px 70px;
     font-family: Montserrat, sans-serif;
     font-size: 22px;
